pom.xml: cleanup surefire configuration
* Upgrade to the latest version 2.13
* Tweak JVM settings to avoid PermGen issues in server tests
* Remove log4j.configuration system property (we don't use log4j anymore)
* Skip all tests for releases

Signed-off-by: Pierre-Alexandre Meyer <pierre@ning.com>